--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -2,7 +2,6 @@
   "name": "web-components",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "build": "tsc && vite build",
     "lint": "eslint src/",
@@ -16,6 +15,11 @@
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
+    "postcss-lit": "^1.1.1",
+    "sass": "^1.77.8",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   }
