--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -2,9 +2,10 @@
   "name": "web-components",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "build": "tsc && vite build",
-    "lint": "eslint src/",
+    "lint": "eslint .",
     "dev": "vite",
     "preview": "vite preview"
   },
