--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,6 +15,7 @@
     "eslint-config-turbo": "^2.0.0",
     "eslint-plugin-lit": "^1.14.0",
     "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "typescript": "^5.3.3"
   }
 }
