--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -9,6 +9,9 @@
     "dev": "vite",
     "preview": "vite preview"
   },
+  "exports": {
+    "./button": "./src/my-button/my-button.ts"
+  },
   "dependencies": {
     "lit": "^3.2.0"
   },
