feat(web-components): :sparkles: export web-component to vanilla app

--- a/apps/vanilla/package.json
+++ b/apps/vanilla/package.json
@@ -9,6 +9,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@repo/web-components": "workspace:*",
+    "@repo/ui": "workspace:*"
+  },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
