--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -1,30 +1,44 @@
 {
-  "name": "web-components",
-  "private": true,
+  "name": "@repo/web-components",
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "tsc --p ./tsconfig-build.json && vite build",
     "lint": "eslint .",
     "dev": "vite",
     "preview": "vite preview"
   },
   "exports": {
-    "./button": "./src/my-button/my-button.ts"
+    "./button": "./dist/my-button/my-button.js"
   },
   "dependencies": {
-    "lit": "^3.2.0"
+    "lit": "^3.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
+    "@vitejs/plugin-react": "^4.3.1",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
+    "glob": "^11.0.0",
     "postcss": "^8.4.44",
     "postcss-lit": "^1.1.1",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-dts": "^4.1.0",
+    "vite-plugin-lib-inject-css": "^2.1.1"
   }
 }
