--- a/packages/web-components/tsconfig.json
+++ b/packages/web-components/tsconfig.json
@@ -1,12 +1,27 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
+    "target": "ES2020",
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
-    "baseUrl": "src"
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "lib"],
+  "exclude": ["dist"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
