--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -2,43 +2,41 @@
   "name": "@repo/web-components",
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/main.js",
-  "types": "dist/main.d.ts",
+  "main": "dist/web-components.js",
+  "exports": {
+    ".": "./dist/web-components.js"
+  },
+  "types": "types/index.d.ts",
   "files": [
-    "dist"
-  ],
-  "sideEffects": [
-    "**/*.css"
+    "dist",
+    "types"
   ],
   "scripts": {
-    "build": "tsc --p ./tsconfig-build.json && vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint src",
     "dev": "vite",
     "preview": "vite preview"
   },
-  "exports": {
-    "./button": "./dist/my-button/my-button.js"
-  },
   "dependencies": {
-    "lit": "^3.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "lit": "^3.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
-    "@vitejs/plugin-react": "^4.3.1",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
-    "glob": "^11.0.0",
+    "babel-loader": "^9.1.3",
+    "globals": "^15.9.0",
+    "lit-html": "^3.2.0",
     "postcss": "^8.4.44",
     "postcss-lit": "^1.1.1",
+    "postcss-scss": "^4.0.9",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.4.1",
-    "vite-plugin-dts": "^4.1.0",
-    "vite-plugin-lib-inject-css": "^2.1.1"
+    "vite-plugin-dts": "^4.1.0"
   }
 }
