--- a/packages/web-components/tsconfig.json
+++ b/packages/web-components/tsconfig.json
@@ -11,6 +11,7 @@
 
     "declaration": true,
     "strict": true,
+    "noEmit": true,
     "strictPropertyInitialization": false,
     "strictFunctionTypes": false,
     "noImplicitThis": false,
