--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -19,7 +19,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.2.0"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lit": "^3.2.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
