--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -2,11 +2,11 @@
   "name": "@repo/web-components",
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/web-components.js",
+  "main": "./dist/web-components.js",
   "exports": {
     ".": "./dist/web-components.js"
   },
-  "types": "types/index.d.ts",
+  "types": "./dist/web-components.js",
   "files": [
     "dist",
     "types"
@@ -19,9 +19,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lit/react": "^1.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lit": "^3.2.0",
+    "react": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -41,7 +43,6 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.4.0",
-    "vite": "^5.4.1",
-    "vite-plugin-dts": "^4.1.0"
+    "vite": "^5.4.1"
   }
 }
