--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -2,15 +2,18 @@
   "name": "@repo/web-components",
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/web-components.js",
-  "exports": {
-    ".": "./dist/web-components.js"
-  },
-  "types": "./dist/web-components.js",
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
+  "main": "./dist/web-components.umd.cjs",
+  "module": "./dist/web-components.js",
+  "exports": {
+    ".": {
+      "import": "./dist/web-components.js",
+      "require": "./dist/web-components.umd.cjs"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
   "scripts": {
     "build": "tsc && vite build",
     "lint": "eslint src",
@@ -43,6 +46,8 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.4.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-dts": "^4.1.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
