--- a/packages/web-components/tsconfig.json
+++ b/packages/web-components/tsconfig.json
@@ -31,7 +31,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "lib"],
   "exclude": ["src/**/*.stories.ts"]
 }
 
