--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -16,15 +16,18 @@
   },
   "scripts": {
     "build": "tsc && vite build",
-    "lint": "eslint src",
+    "lint": "eslint lib",
     "dev": "rm -rf dist && tsc && vite build --watch",
     "dev:local": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lit-labs/observers": "^2.0.3",
     "@lit/react": "^1.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "lit": "^3.2.0",
     "react": "^18.3.1",
     "tailwind-merge": "^2.5.2",
@@ -34,9 +37,15 @@
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-shape": "^3.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "globals": "^15.9.0",
     "lit-html": "^3.2.0",
     "postcss": "^8.4.44",
