--- a/packages/sszvis-wc/package.json
+++ b/packages/sszvis-wc/package.json
@@ -22,6 +22,9 @@
     "lit": "^3.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vite-plugin-dts": "^4.1.0",
