--- a/packages/sszvis-wc/tsconfig.json
+++ b/packages/sszvis-wc/tsconfig.json
@@ -20,5 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "lib/components/my-element.ts"]
+  "include": ["src", "lib"]
 }
