--- a/packages/sszvis-wc/package.json
+++ b/packages/sszvis-wc/package.json
@@ -19,7 +19,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.2.0"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lit": "^3.2.0",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
