--- a/packages/sszvis-wc/package.json
+++ b/packages/sszvis-wc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sszvis-web-components",
+  "name": "@repo/sszvis-web-components",
   "version": "0.0.1",
   "type": "module",
   "files": [
@@ -19,12 +19,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lit-labs/observers": "^2.0.3",
+    "@lit/task": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "lit": "^3.2.0",
+    "sszvis": "^3.0.5",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
