test: :alembic: add sszvis charts in vanilla js

--- a/apps/vanilla/package.json
+++ b/apps/vanilla/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@repo/web-components": "workspace:*",
+    "@repo/sszvis-web-components": "workspace:*",
     "@repo/ui": "workspace:*"
   },
   "devDependencies": {
